spade-tests/src/snapshots/spade_tests__ast_lowering__pipeline_depth_mismatch.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(3) p(clk: clock, b: bool) -> bool {
    reg;
    reg;
    reg;
        b
}

entity top(clk: clock) -> bool {
    inst(2) p(clk, true)
}


error: Pipeline depth mismatch
  ┌─ testinput:9:10
  │
1 │ pipeline(3) p(clk: clock, b: bool) -> bool {
  │ ----------- p has depth 3
  ·
9 │     inst(2) p(clk, true)
  │          ^ Expected depth 3 here


